[gd_scene load_steps=6 format=2]

[ext_resource path="res://Assets/Sprites/player.png" type="Texture" id=1]
[ext_resource path="res://Scripts/player.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 7, 9.75 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 1, 7 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 7, 10 )

[node name="Player" type="KinematicBody2D" groups=["player"]]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 4.76837e-07, 1.5 )
scale = Vector2( 0.9375, 0.84375 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 1.75 )
shape = SubResource( 1 )

[node name="Camera2D" type="Camera2D" parent="."]
visible = false
offset = Vector2( 0, 90 )

[node name="PlayerDrill" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerDrill"]
modulate = Color( 0.945098, 0.00392157, 0.976471, 1 )
position = Vector2( 0, -2 )
shape = SubResource( 2 )

[node name="Gas_detector" type="Area2D" parent="." groups=["gas_detector"]]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Gas_detector"]
position = Vector2( 0, 2 )
shape = SubResource( 3 )

[connection signal="body_entered" from="PlayerDrill" to="." method="_on_PlayerDrill_body_entered"]
[connection signal="body_exited" from="PlayerDrill" to="." method="_on_PlayerDrill_body_exited"]
[connection signal="area_entered" from="Gas_detector" to="." method="_on_Gas_detector_area_entered"]
